Fix left sidebar overlapping main content
This applied the left sidebar's padding when the right sidebar was open

Should fix #9

--- a/custom.css
+++ b/custom.css
@@ -915,7 +915,7 @@ a.nav-right {
   }
 }
 @media (min-width: 640px) {
-  .ls-right-sidebar-open #main-container.is-left-sidebar-open {
+  .ls-left-sidebar-open #main-container.is-left-sidebar-open {
     padding-left: var(--ls-left-sidebar-width) !important;
   }
 }
